add verify otp code function.

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,11 @@ dependencyResolutionManagement {
         mavenCentral()
         maven { url("https://jitpack.io") }
     }
+    buildscript {
+        dependencies {
+            classpath 'com.google.gms:google-services:4.3.13'
+        }
+    }
 }
 rootProject.name = "SimpleChat"
 include ':app'
