add setup profile page; add database and storage.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
                 android:value="" />
         </activity>
         <activity android:name=".activity.SetupProfileActivity"/>
+        <activity android:name=".activity.FriendsActivity"/>
 
     </application>
 
