--- a/build.gradle
+++ b/build.gradle
@@ -4,4 +4,5 @@ plugins {
     id 'com.android.library' version '7.3.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
     id 'com.google.gms.google-services' version '4.3.13' apply false
+    id "org.jetbrains.kotlin.kapt" version "1.4.20" apply false
 }
