--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -32,9 +34,9 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity android:name=".activity.SetupProfileActivity"/>
-        <activity android:name=".activity.FriendsActivity"/>
-
+        <activity android:name=".activity.SetupProfileActivity" />
+        <activity android:name=".activity.FriendsActivity" />
+        <activity android:name=".activity.ChatActivity" />
     </application>
 
 </manifest>
